@@ -1,3 +1,9 @@
+unreleased
+
+* Bug fixes
+
+  * Get connection from the right connection pool (namely, the model's, not AR::Base's)
+
 2.5.1 / 2013-03-15
 
 * Enhancements
